# Extrator-de-Leads-Marcas-e-Patentes-INPI

./: .gitignore  README.md  main.py  pyproject.toml
src/: processar_marcas.py
