[project]
name = "extrator-marcas-inpi"
version = "0.1.0"
description = "Pipeline de extração e filtragem de marcas do INPI para prospecção de leads."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.3.0",
]